// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`droppable-placeholder snapshot className 1`] = `
<div
  style={
    Object {
      "flex": 1,
      "minHeight": "80px",
    }
  }
>
  <PlaceHolder
    className="foo"
    isCategorize={true}
  >
    content
  </PlaceHolder>
</div>
`;

exports[`droppable-placeholder snapshot disabled 1`] = `
<div
  style={
    Object {
      "flex": 1,
      "minHeight": "80px",
    }
  }
>
  <PlaceHolder
    disabled={true}
    isCategorize={true}
  >
    content
  </PlaceHolder>
</div>
`;

exports[`droppable-placeholder snapshot grid 1`] = `
<div
  style={
    Object {
      "flex": 1,
      "minHeight": "80px",
    }
  }
>
  <PlaceHolder
    grid={
      Object {
        "columns": 2,
      }
    }
    isCategorize={true}
  >
    content
  </PlaceHolder>
</div>
`;

exports[`droppable-placeholder snapshot renders 1`] = `
<div
  style={
    Object {
      "flex": 1,
      "minHeight": "80px",
    }
  }
>
  <PlaceHolder
    isCategorize={true}
  >
    content
  </PlaceHolder>
</div>
`;
